--- a/style.css
+++ b/style.css
@@ -7,3 +7,25 @@ img.slide {
 .row-font {
 	font-family: Georgia;
 }
+.social-icons a {
+	width: 40px;
+	height: 40px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: #e6e3e3;
+	margin: 20px 10px;
+	border-radius: 50%;
+}
+.social-icons {
+	display: flex;
+	justify-content: center;
+}
+.social-icons i {
+	color: #000000;
+}
+.social-icons a:hover {
+	background-color: rgb(255, 255, 213);
+	box-shadow: 2px 2px 12px white;
+	transition: all ease 0.5s;
+}
